[gd_scene load_steps=2 format=3 uid="uid://terminal_ui_001"]

[ext_resource type="Script" path="res://ui/terminal_ui.gd" id="1"]

[node name="TerminalUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConsoleLabel" type="Label" parent="Panel/VBoxContainer"]
layout_mode = 2
text = "=== Helm Console ==="
horizontal_alignment = 1

[node name="OutputText" type="TextEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
editable = false
wrap_mode = 1
scroll_smooth = true
scroll_v_scroll_speed = 40.0

[node name="InputLine" type="LineEdit" parent="Panel/VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter command..."
